--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "install": "^0.13.0",
     "prettier": "^3.0.3",
+    "sass": "^1.66.1",
     "vite": "^4.4.5"
   }
 }
